Accordion: Add supporting label and fix left icon spacing (#2935)
* Update css and stories

* modify css

* add test cases and format code

* modified code

--- a/stencil-workspace/src/components/modus-accordion-item/modus-accordion-item.vars.scss
+++ b/stencil-workspace/src/components/modus-accordion-item/modus-accordion-item.vars.scss
@@ -9,3 +9,4 @@ $modus-accordion-item-expanded-border-left-color: var(
   --modus-accordion-item-expanded-border-left-color,
   #0063a3
 ) !default; // Blue
+$modus-accordion-label-color: var(--modus-accordion-label-color, #6a6e79) !default;
